# terminator

./: .gitignore  CMakeLists.txt  README.md  setup.sh
.devcontainer/: devcontainer.json
src/: CMakeLists.txt  main.cpp
src/Colors/: CMakeLists.txt  Colors.h
src/Controller/: CMakeLists.txt  Controller.cpp  Controller.h
src/InputParser/: CMakeLists.txt  InputParser.cpp  InputParser.h
